# pyKDEX

./: .gitignore  BASELINE_VALIDATION.md  CHANGELOG.md  CITATION.cff  HANDOFF_0.0.10_HEAT_SELECTION_BATCH.md  HANDOFF_0.0.11_SPATIOTEMPORAL_FOUNDATION.md  HANDOFF_0.0.12_NETWORK_TIME_FOUNDATION.md  HANDOFF_0.0.13_NETWORK_TIME_BANDWIDTHS.md  HANDOFF_0.0.14_WORKSPACE_PERSISTENCE.md  HANDOFF_0.0.7_NETWORK_BANDWIDTHS.md  HANDOFF_0.0.8_SPATIAL_BOUNDARY_ANISOTROPY.md  HANDOFF_0.0.9_HEAT_NETWORK_KDE.md  HANDOFF_NEXT_CONVERSATION.md  LICENSE  MYPY_ERRORS.txt  POSTMERGE_0.0.8_VERIFICATION.md  PROJECT_STRUCTURE.md  README.md  README.zh.md  THIRD_PARTY_NOTICES.md  mkdocs.yml  pyproject.toml
.github/: NETWORK_FOUNDATION_PR.md
.github/patches/: chunk00  chunk01  chunk02  chunk03  chunk04  chunk05  chunk06  chunk07  chunk08  chunk09  chunk10
.github/workflows/: apply-0.0.7.yml  apply-pykdex-0.0.8.yml  capture-network-kde-mypy.yml  ci.yml  debug-network-kde.yml  debug-network.yml  debug-py311-network.yml  export-source-0.0.8.yml  export-source.yml  finalize-handoff-0.0.7.yml  fix-py311-network.yml  format-0.0.7.yml  format-network-kde.yml  format-network.yml  patch-network-kde-mypy.yml  record-0.0.7-merge.yml
.tmp/: pykdex008.part.00  pykdex008.part.01  pykdex008.part.010  pykdex008.part.011  pykdex008.part.02
benchmarks/: benchmark_heat_selection_batch.py  benchmark_network_bandwidths.py  benchmark_network_time_bandwidths.py  benchmark_workspace_persistence.py
docs/: index.md
docs/api/: adapters.md  bandwidths.md  corrections.md  data.md  datasets.md  heat-network-kde.md  kernels.md  network-bandwidths.md  network-kde.md  network-time.md  network.md  persistence.md  results.md  selection.md  spatial-kde.md  spatiotemporal.md
docs/development/: architecture.md  handoff-0.0.10-heat-selection-batch.md  handoff-0.0.11-spatiotemporal-foundation.md  handoff-0.0.12-network-time-foundation.md  handoff-0.0.13-network-time-bandwidths.md  handoff-0.0.14-workspace-persistence.md  handoff-0.0.7-network-bandwidths.md  handoff-0.0.9-heat-network-kde.md  handoff-policy.md  network-foundation-validation.md  roadmap.md  testing.md
docs/estimators/: heat-network-kde.md  network-kde.md  spatial-kde.md  spatiotemporal-kde.md  temporal-network-kde.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/guides/: bandwidths.md  data.md  datasets.md  kernels.md  network-bandwidths.md  network-data.md  network-distances.md  network-time-data.md  results.md  spatial-boundary-anisotropy.md  (+1 more)
examples/: 01_spatial_kde.py  02_weighted_intensity.py  03_bandwidth_selection.py  04_adaptive_bandwidths.py  05_data_objects.py  06_network_foundation.py  07_network_distances.py  08_network_kde.py  09_network_bandwidths.py  10_spatial_boundary_anisotropy.py  11_heat_network_kde.py  12_heat_selection_batch.py  13_spatiotemporal_kde.py  14_temporal_network_kde.py  15_network_time_bandwidths.py  16_workspace_persistence.py  API_COVERAGE.csv  run_all.py  validate_coverage.py
tests/: conftest.py  test_adaptive_bandwidths.py  test_bandwidth_selection.py  test_boundary_dataset.py  test_component_contracts.py  test_data_objects.py  test_datasets.py  test_examples.py  test_heat_network_kde.py  test_heat_selection_batch.py  test_kernels.py  test_linear_network.py  test_lixels_workspace.py  test_network_bandwidths.py  test_network_datasets.py  test_network_distance.py  test_network_distance_workspace.py  test_network_kde.py  test_network_propagation.py  test_network_snapping.py  test_network_time_bandwidths.py  test_network_time_data.py  test_network_traversal.py  test_results.py  test_spatial_boundary_anisotropy.py  test_spatial_kde.py  test_spatiotemporal_data.py  test_spatiotemporal_kde.py  test_spatiotemporal_selection.py  test_structured_spatial_kde.py  test_temporal_network_kde.py  test_validation.py  test_workspace_persistence.py
tools/: smoke_installed_distribution.py  verify_distributions.py
(+88 files in other folders)
