[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyKDEX"
dynamic = ["version"]
description = "An extensible Python framework for spatial and network kernel density estimation"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE", "THIRD_PARTY_NOTICES.md"]
authors = [
    {name = "Jinghao Hu", email = "hujinghao20@mails.ucas.ac.cn"}
]
keywords = [
    "kernel density estimation",
    "spatial statistics",
    "spatiotemporal analysis",
    "network analysis",
    "GIS",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "numpy>=1.25.2",
    "scipy>=1.11.4",
    "pandas>=2.0.3",
]

[project.optional-dependencies]
geo = [
    "geopandas>=0.14.4",
    "shapely>=2.0.2",
    "pyproj>=3.6.0",
]
network = [
    "geopandas>=0.14.4",
    "shapely>=2.0.2",
    "pyproj>=3.6.0",
    "networkx>=3.2",
]
osm = [
    "osmnx>=2.0.7",
]
plot = [
    "matplotlib>=3.7.2",
]
all = [
    "geopandas>=0.14.4",
    "shapely>=2.0.2",
    "pyproj>=3.6.0",
    "networkx>=3.2",
    "osmnx>=2.0.7",
    "matplotlib>=3.7.2",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "geopandas>=0.14.4",
    "shapely>=2.0.2",
    "pyproj>=3.6.0",
    "networkx>=3.2",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "geopandas>=0.14.4",
    "shapely>=2.0.2",
    "pyproj>=3.6.0",
    "networkx>=3.2",
    "matplotlib>=3.7.2",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "isort>=5.13.0",
    "mypy>=1.10.0",
    "build>=1.2.0",
    "twine>=5.1.0",
]
docs = [
    "mkdocs>=1.6.0,<2.0",
    "mkdocs-material>=9.5.0,<10.0",
    "mkdocstrings[python]>=0.25.0",
    "pymdown-extensions>=10.8.0",
]

[project.urls]
Homepage = "https://github.com/hujinghaoabcd/pyKDEX"
Documentation = "https://hujinghaoabcd.github.io/pyKDEX"
Repository = "https://github.com/hujinghaoabcd/pyKDEX"
Issues = "https://github.com/hujinghaoabcd/pyKDEX/issues"

[tool.setuptools.dynamic]
version = {attr = "pykdex.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pykdex = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-config", "--strict-markers"]
markers = [
    "reference: comparisons against independently generated numerical fixtures",
]
filterwarnings = [
    "error::pytest.PytestUnraisableExceptionWarning",
    "error::pytest.PytestUnhandledThreadExceptionWarning",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
py_version = 311

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"examples/**/*.py" = ["E402"]

[tool.coverage.run]
branch = true
source = ["pykdex"]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 1
fail_under = 80
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.11"
files = ["src/pykdex"]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
follow_imports = "skip"
ignore_missing_imports = true
no_site_packages = true
no_implicit_optional = true
pretty = true
show_error_codes = true
strict_equality = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
